# kaslite

./: .coverage  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.inference  MANIFEST.in  PROJECT_STATUS.md  README.md  docker-compose.deploy.yml  docker-compose.yml  dvc.yaml  fix_tests.py  params.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_e2e_test.py  setup.py  test_deployment.py  test_monitoring.py  test_sweep.yaml  validate_phase1.py
.github/workflows/: ci.yml
data/: .gitignore  test_spirals.npz
docs/: E2E_INTEGRATION_TESTING.md  MODEL_REGISTRY_DEPLOYMENT.md  MONITORING_IMPLEMENTATION.md  Morphogenetic Architectures.txt  STEP5_COMPLETION_SUMMARY.md  STEP6_COMPLETION_SUMMARY.md  instrumentation.md  kasmina_curriculum.md  kasmina_implementation.md  kasmina_staging_plan.md  live_data_dashboard_implementation.md  phase2_implementation_plan.md  phase2_implementation_summary.md  phase3_completion_summary.md  phase3_final_validation.md  phase3_implementation_plan.md  phase3_implementation_status.md  phase3_summary.md  phase3_user_guide.md  repository_management.md  stage2_blueprint_library.md  tamiyo.md  test_refactoring_summary.md  test_reorganization_summary.md
docs/1. Reference/: MONITORING_IMPLEMENTATION.md  git_ignore_strategy.md
docs/2. Architecture/kasima/: BLENDING_STRATEGIES.md  GRAFTING_STRATEGIES.md  IMPLEMENTATION_PLAN_REVIEWED.md  SEED_LIFECYCLE.md  TECHNICAL_SPECIFICATION.md  UPGRADE_PATH.md  blending_strategy_implementation_plan.md  grafting_strategy_implementation_plan.md  kasima_fix.md
docs/2. Architecture/tamiyo/: stage4_advanced_blueprints.md  stage6_production_readiness.md  tamiyo_implementation.md
docs/3. Taskings/: test_suite_rebuild.txt
docs/UI_implementation/: high_level_plan.md  phase_1_detailed_plan.md
docs/cifar/: CIFAR10_IMPLEMENTATION_PLAN.md  cifar_setup.md
docs/tamiyo_plan/: stage1_foundation_infrastructure.md  stage3a_core_policy_network.md  stage3b_reward_system_intensity_control.md  stage5_curriculum_integration.md  tamiyo_curriculum.md  tamiyo_init.md  tamiyo_staging_plan.md
docs/test_audit/: ACHIEVEMENT_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_REPORT.md  IMPLEMENTATION_SUCCESS.md  STATUS_FINAL.md  base_net_mypy_fixes.md  file_replacement_summary.md  integration_test_naming_cleanup.md  python_version_update.md  refactoring_summary.md  tensorboard_integration_status_report.md  test_base_net.md  test_cli_dashboard.md  test_cli_dashboard_removal_analysis.md  test_cli_review.md  test_components_integration.md  test_core_analysis.md  test_datasets_analysis.md  test_enhancement_status_report.md  test_inference_server.md  test_logger.md  test_model_registry.md  test_model_registry_cli_independent_review.md  test_refactoring_implementation.md  test_seed_manager.md  test_seed_manager_review.md  test_sentinel_seed.md  test_sentinel_seed_corrected_analysis.md  test_soft_landing.md  test_soft_landing_clean.md  test_soft_landing_enhancement_status.md  test_sweep_cli.md  test_sweep_cli_analysis.md  test_sweep_cli_refactoring_status.md  test_sweep_config.md  test_sweep_functionality.md  test_tensorboard_integration.md  test_training.md  test_training_implementation_status.md  (+3 more)
emerg/: old_components..py  old_training.py
examples/: architecture_search.yaml  basic_sweep.yaml  bayesian_sweep.yaml  dataset_comparison.yaml  enhanced_sweep.yaml  learning_rate_sweep.yaml  quick_sweep.yaml  quick_test.yaml
monitoring/: QUICK_TEST.md  README.md  alertmanager.yml  prometheus.yml  rules.yml
monitoring/grafana/dashboards/: kaslite-morphogenetic-dashboard.json
morphogenetic_engine/: __init__.py  blending.py  blending_analytics.py  cli_dashboard.py  components.py  core.py  datasets.py  events.py  experiment.py  grafting.py  inference_server.py  logger.py  model_registry.py  monitoring.py  runners.py  training.py  ui_dashboard.py  utils.py
morphogenetic_engine/cli/: __init__.py  __main__.py  arguments.py  model_registry_cli.py  reports.py  sweep.py
morphogenetic_engine/sweeps/: __init__.py  bayesian.py  config.py  grid_search.py  results.py  runner.py
morphogenetic_engine/ui/: __init__.py  config.py  dashboard.py  events.py  grids.py  layout.py  metrics.py  panels.py
scripts/: README.md  cli_dashboard.py  demo_phase2.py  demo_phase3.py  demonstrate_application.py  generate_data.py  monitoring.sh  pre_commit_hook.py  quick_stability_test.py  run_morphogenetic_experiment.py  run_spirals.py  setup_git_hooks.sh  start_monitoring.sh  status_monitoring.sh  stop_monitoring.sh  test_phase3.py  test_phase3_implementation.py  validate_gitignore.py  validate_sweep_configs.py
tests/: __init__.py  conftest.py  conftest_new.py  conftest_old.py  test_base_net.py  test_blending_strategies.py  test_cifar10.py  test_cli.py  test_cli_dashboard.py  test_component_interactions.py  test_components.py  test_components_integration.py  test_core.py  test_datasets.py  test_e2e_integration.py  test_events.py  test_germination_controller.py  test_inference_server.py  test_integration.py  test_kasmina_micro.py  test_logger.py  test_model_registry.py  test_model_registry_cli.py  test_monitoring.py  test_monitoring_fixed.py  test_morphogenetic_utils.py  test_phase1_integration.py  test_phase1_simple_integration.py  test_pipeline_integration.py  test_run_morphogenetic_experiment.py  test_run_spirals.py  test_seed_manager.py  test_sentinel_seed.py  test_soft_landing.py  test_sweep_cli.py  test_sweep_config.py  test_sweep_functionality.py  test_tensorboard_integration.py  test_test_utils.py  test_training.py  (+2 more)
tests.old/: conftest.py
tests.old/utils/: __init__.py  config_utils.py  mock_utils.py  tensor_utils.py  validation_utils.py
tests/utils/: __init__.py  assertion_utils.py  file_utils.py  mock_utils.py  model_utils.py  sweep_test_utils.py  tensor_utils.py  validation_utils.py
